Update النقود و البنوك.md

--- a/النقود و البنوك.md
+++ b/النقود و البنوك.md
@@ -1,8 +1,7 @@
 ### البنك الأهلي السعودي
-- الزبير الشعبي
 - عبدالحكيم الشنقيطي
-- عبد الرحمن أحمد
-- محمد السهلي
+- وائل عباس
+- محمد عويض السهلي
 - راكان الحربي
 
 ---
