Update النقود و البنوك.md

--- a/النقود و البنوك.md
+++ b/النقود و البنوك.md
@@ -1,4 +1,4 @@
-### البنكٌ الأهلي السعودي
+### البنك الأهلي السعودي
 - عبدالحكيم الشنقيطي
 - وائل عباس
 - محمد عويض السهلي
@@ -10,11 +10,10 @@
 
 #### عناصر الأصول و الخصوم و مصادر الإيرادات وأوجه الإنفاق
 
-
 عبدالحكيم الشنقيطي  
 
 --!
-#### من أتى بفكرة التغذية الراجعة الى بيئة العمل؟
+#### ما هي الأصول ؟
 <br>
 
 ركزت المدارس الحديثة في الإدارة على أهمية الاستماع إلى الموظفين على خلاف المدارس القديمة
