Update النقود و البنوك.md

--- a/النقود و البنوك.md
+++ b/النقود و البنوك.md
@@ -16,6 +16,6 @@
 #### ما هي الأصول ؟
 <br>
 
-.
+( الأصول هي كيانات اقتصادية تنفذ عليها الوحدات المؤسسية حقوق ملكية ويمكن لمالكيها الحصول منها على منافع اقتصادية بحيازتها أو باستخدامها خالل فترة من الزمن. )
 <!-- .element: class="fragment" data-fragment-index="1" -->
 --!
