Update النقود و البنوك.md

--- a/النقود و البنوك.md
+++ b/النقود و البنوك.md
@@ -1,4 +1,5 @@
 ### البنك الأهلي السعودي
+
 - عبدالحكيم الشنقيطي
 - وائل عباس
 - محمد عويض السهلي
@@ -7,15 +8,63 @@
 
 ---
 
+### عناصر الأصول و الخصوم و مصادر الإيرادات وأوجه الإنفاق
 
-#### عناصر الأصول و الخصوم و مصادر الإيرادات وأوجه الإنفاق
-
-عبدالحكيم الشنقيطي  
+عبدالحكيم الشنقيطي
 
 --!
-#### ما هي الأصول ؟
-<br>
 
-( الأصول هي كيانات اقتصادية تنفذ عليها الوحدات المؤسسية حقوق ملكية ويمكن لمالكيها الحصول منها على منافع اقتصادية بحيازتها أو باستخدامها خالل فترة من الزمن. )
+### ما هي الأصول ؟
+
+حقوق ملكية ويمكن لمالكيها الحصول منها على منافع اقتصادية بحيازتها أو باستخدامها خالل فترة من الزمن
+
+
+--!
+#### إذا فما مقدار الأصول التي يمتلكها البنك الأهلي السعودي؟
+
+في سنة 2022 كان إجمالي الأصول 945 مليار ريال سعودي  
 <!-- .element: class="fragment" data-fragment-index="1" -->
+ وزاد في السنة التالية بنسبة %12+ وأصبحت ترليون ريال 
+ <!-- .element: class="fragment" data-fragment-index="2" -->  
+
+![alt text](image.png)
+
+
 --!
+
+### صافي التمويل والسلف
+
+وهي أكبر مصادر أموال البنوك وهي القروض وقد ارتفعت بنسبة 10%  
+
+من 545 بليون الى 601 بليون ريال سعودي  خلال السنتين الماضية
+![alt text](image-1.png)
+
+--!
+### استثمارات بالصافي 
+
+من 258 بليون ريال إلى 269 بليون ريال زيادة 4%
+
+ولنلقي نظرة على مثال لهذه الاستثمارات
+
+--!
+
+### استثمارات في بنوك أجنبية
+
+![alt text](image-2.png)
+وعلق أحد القراء على هذا الخبر فقال:
+![alt text](image-3.png)
+
+--!
+### مثال على استثمار غير متوقع
+
+في الوقت الذي تسببت فيه جائحة كورونا في إصابة الأسواق العالمية بالضعف في أوائل عام 2020
+
+ضغط ولي العهد السعودي، بعد أن استشعر الفرصة، على صندوق الاستثمارات من أجل عملية شراء دولية للأسهم.
+
+وقاوم مجلس إدارة الصندوق هذه الخطوة باعتبارها محفوفة بالمخاطر
+
+Note: وفي ظل عدم وجود أصول سائلة كافية لإشباع رغبة الأمير في التحرك بسرعة، طلب الصندوق من البنك المركزي السعودي منحه عشرات المليارات من الدولارات
+<!-- قام بانتهاز الفرصة في وقت الجائحة والاستثمار الهائل الذي قام به في الشركات المتضررة عالميا -->
+
+
+
