--- a/النقود و البنوك.md
+++ b/النقود و البنوك.md
@@ -14,9 +14,9 @@
 
 --!
 
-### ما هي الأصول ؟
+### ما هي الأصول ؟ (الموجودات)
 
-حقوق ملكية ويمكن لمالكيها الحصول منها على منافع اقتصادية بحيازتها أو باستخدامها خالل فترة من الزمن
+هي كيانات اقتصادية يمكن لمالكيها الحصول منها على منافع اقتصادية بحيازتها أو باستخدامها خالل فترة من الزمن
 
 
 --!
@@ -27,7 +27,7 @@
  وزاد في السنة التالية بنسبة %12+ وأصبحت ترليون ريال 
  <!-- .element: class="fragment" data-fragment-index="2" -->  
 
-![alt text](image.png)
+![alt text](assets/image.png)
 
 
 --!
@@ -37,22 +37,23 @@
 وهي أكبر مصادر أموال البنوك وهي القروض وقد ارتفعت بنسبة 10%  
 
 من 545 بليون الى 601 بليون ريال سعودي  خلال السنتين الماضية
-![alt text](image-1.png)
+![alt text](assets/image-1.png)
 
 --!
 ### استثمارات بالصافي 
 
 من 258 بليون ريال إلى 269 بليون ريال زيادة 4%
 
+![alt text](assets/image-5.png)
 ولنلقي نظرة على مثال لهذه الاستثمارات
 
 --!
 
 ### استثمارات في بنوك أجنبية
 
-![alt text](image-2.png)
+![alt text](assets/image-2.png)
 وعلق أحد القراء على هذا الخبر فقال:
-![alt text](image-3.png)
+![alt text](assets/image-3.png)
 
 --!
 ### مثال على استثمار غير متوقع
@@ -66,5 +67,383 @@
 Note: وفي ظل عدم وجود أصول سائلة كافية لإشباع رغبة الأمير في التحرك بسرعة، طلب الصندوق من البنك المركزي السعودي منحه عشرات المليارات من الدولارات
 <!-- قام بانتهاز الفرصة في وقت الجائحة والاستثمار الهائل الذي قام به في الشركات المتضررة عالميا -->
 
+--!
+### الخصوم (المطلوبات)
 
+1. ودائع العملاء
+
+وهي أكبر خصوم البنك من 568 بليون ريال إلى 590 بليون ريال  
+زيادة 4%  
+
+![alt text](assets/image-4.png)
+
+Note:   وهذا شغل البنوك التجارية وجل عملها على أخذ أموال الناس والمتاجرة بها والاستثمار  
+
+وأفضل مثال على ذلك الصحابي الجليل الزبير بن العوام 
+--!
+
+
+### الإيرادات
+![alt text](assets/image-6.png)
+كان صافي دخل سنة (22) 18 بليون ريال   
+وفي سنة (23) ارتفع بنسبة 11% الى 20 بليون ريال
+
+--!
+
+### دخل العمليات التشغيلية
+![alt text](assets/image-7.png)
+دخل العمليات التشغيلية ارتفع من 33 بليون ريال الى 34 بليون 
+- الاستشارات المالية 
+- تسهيل تداول الأوراق المالية 
+- صرف العملات 
+
+Note: وهذا ليس تركيز البنك الأكبر لكنه يشكل مبلغ جيد بالنسبة للبنك
+--!
+### أوجه الإنفاق
+
+![alt text](assets/image-8.png)
+
+وهذا هو أكبر مصادر الإنفاق في هذه السنة وقد ارتفع بنسبة 175% !!!
+
+من 8 بليون في 2022 الى 22 بليون في 2023
+
+وكما ذكرنا من قبل أن هذا قد يعود الى أن البنك يخطط لفتح مشاريع واستثمارات جديدة لذلك يقوم بإنفاق هذه الأموال الهائلة
+
+---
+
+
+### الخدمات و أنواع القروض و طرق الاستثمار المقدمة من بنك الاهلي
+وائل عباس  
+
+--!
+## الخدمات المقدمة
+--!
+
+### السحب النقدي الطارئ
+
+إمكانية سحب مبلغ نقدي متى احتجت لذلك، حتى إن لم تكن بطاقة مدى بحوزتك يمكنك استخدام الدفع عبر الهاتف.
+
+--!
+
+### عروض بطاقات الأهلي
+
+​التخفيضات والعروض التي صممت خصيصاً لتلبي احتياجاتك مثل
+- بطاقة كاش باك الائتمانية  
+
+(استرد حتى 2% من القيمة النقدية لمشترياتك باستخدام البطاقة)  
+
+وقد أفتى بجوازها معالي الشيخ سعد الشثري
+
+--! 
+### حسابات الأمانة
+
+يوفر البنك الأهلي السعودي خدمة حسابات الأمانة، حيث يقوم البنك بدور وكيل حساب الأمانة عبر الأطراف المعنية في الاتفاقيات التجارية المتبادلة. 
+
+--!
+### خدمات سداد
+
+-  سداد الفواتير المتكررة
+
+- سداد فاتورة لمرة واحدة
+
+- عرض تواريخ عمليات السداد واسترداد المدفوعات
+
+--!
+## أنواع القروض
+
+--!
+### التمويل الجديد
+
+الحصول على السيولة النقدية الفورية لجميع القطاعات الحكومية والشركات الخاصة المعتمدة التي تحوّل رواتب موظفيها إلى البنك الأهلي عبر نظام "سريع" لتحويل الرواتب.
+
+--!
+### التمويل التكميلي
+
+مع التمويل التكميلي، يمكنك زيادة مبلغ التمويل وفترة السداد بعد سداد 20٪ من تمويلك القائم.
+
+
+--!
+
+### التمويل الشخصي قصير الأجل
+
+احصل على تمويل شخصي قصير الأجل لتغطية احتياجاتك الحالية، مع فترة سداد تصل إلى 12 شهراً.
+
+--!
+
+## أنواع الاستثمارات
+
+--! 
+
+### خيرات الأهلي 
+
+مع خيرات الأهلي، يمكنك شراء السلع ومن ثم بيعها للبنك في أجل مسمى بسعر متفق عليه، مما يمكّنك من الاحتفاظ بأرباحك.
+
+--!
+
+### الاكتتاب أو زيادة رأس المال
+
+الشركات التي ترغب في طرح أسهمها للاكتتاب العام أو زيادة رأسمالها. 
+
+
+--! 
+
+### الإجارة
+هي أحد أشكال عقود التأجير، حيث يقوم البنك الأهلي السعودي بنقل حق استخدام أحد الأصول أو العقارات إليك لفترة زمنية محددة مقابل دفع الإيجار. وفي نهاية فترة الإيجار، يمكنك اختيار نقل حق الملكية إلى شركتك.
+
+--!
+### المشاركة
+وهي عقد يقوم فيه طرفان أو أكثر بالمشاركة في رأس مال مشروع مشترك والمشاركة في الأرباح والخسائر لهذا المشروع. هذا النوع من التمويل هو مشاركة في التمويل بين البنك والعميل حيث يتفق الطرفان على طبيعة الشراكة ويقومان بتحديد دور كل منهما.
+
+
+
+
+
+---
+
+
+### أهم المؤسسات المالية و الأدوات المالية في السوق السعودي
+
+محمد عويض السهلي 
+
+--!
+## أهم المؤسسات المالية
+
+--!
+
+### هيئة السوق المالية (CMA):
+
+الجهة المنظمة للسوق المالي السعودي، تُشرف على الأنظمة والقوانين لضمان العدالة والشفافية وحماية المستثمرين.
+
+--!
+### تداول (Tadawul):
+
+السوق الرئيسي لتداول الأسهم والصكوك والسندات وصناديق الاستثمار المتداولة. تعد أكبر سوق مالية في المنطقة من حيث القيمة السوقية.
+--! 
+
+### البنك المركزي السعودي (SAMA):
+
+يُنظم القطاع المصرفي ويُشرف على السيولة وأسعار الفائدة وسياسات النقد، بالإضافة إلى تنظيم البنوك وشركات التأمين.
+
+
+--!
+## أهم الأدوات المالية
+
+--!
+### الأسهم
+
+تُعتبر الأسهم من الأدوات الأساسية في السوق السعودي، وهي متاحة للتداول في السوق الرئيسي وسوق نمو (المخصص للشركات الصغيرة والمتوسطة).
+--!
+### الصكوك والسندات
+
+أدوات دين تُستخدم لجذب التمويل من الأفراد والمؤسسات، وتُعد وسيلة فعّالة لتنويع المحافظ الاستثمارية.
+--!
+### صناديق الاستثمار المتداولة (ETFs)
+
+منتجات استثمارية تُتيح للمستثمرين الاستثمار في سلة من الأصول مثل الأسهم أو السندات.
+--!
+### صناديق الاستثمار العقارية المتداولة (REITs)
+
+تُوفر فرصاً للاستثمار في القطاع العقاري مع تحقيق دخل دوري.
+--!
+### عقود المشتقات
+
+مثل العقود المستقبلية وعقود الخيارات، وهي أدوات مالية مُصممة للتحوط أو الاستفادة من تحركات الأسعار.
+
+---
+
+### الدور الذي يؤديه البنك المركزي السعودي و البنوك التجارية في الطلب والعرض النقدي
+
+محمد عبدالمجيد معافا 
+
+
+--!
+
+## أدوار البنك المركزي السعودي (ساما)
+
+--!
+
+### إصدار العملة والتحكم في العرض النقدي
+
+البنك المركزي هو المسؤول عن إصدار الريال السعودي وتحديد كمية النقد المتداول في الاقتصاد، بما يضمن التوازن بين العرض والطلب النقدي.
+--!
+### السياسة النقدية
+
+يستخدم أدوات السياسة النقدية (مثل أسعار الفائدة، عمليات السوق المفتوحة، واحتياطي البنوك) للسيطرة على التضخم، تعزيز النمو الاقتصادي، والحفاظ على استقرار العملة.
+
+على سبيل المثال، يمكنه رفع أو خفض أسعار الفائدة الأساسية لتقليل أو زيادة الطلب على القروض.
+--!
+### إدارة الاحتياطي النقدي
+
+يحدد نسبة الاحتياطي الإلزامي الذي يجب على البنوك التجارية الاحتفاظ به، مما يؤثر بشكل مباشر على قدرة البنوك على تقديم القروض.
+--!
+### التأثير على الطلب الكلي
+
+يعمل على تحقيق استقرار الأسعار ومراقبة التضخم، مما يؤثر على القوة الشرائية للمواطنين ومستوى الطلب النقدي.
+
+--!
+## أدوار البنوك التجارية
+
+--!
+### تقديم القروض والائتمان
+
+تلعب البنوك التجارية دورًا أساسيًا في خلق النقود من خلال تقديم القروض. عندما تمنح القروض، تزيد كمية النقد المتاح في الاقتصاد، ما يؤثر على العرض النقدي.
+
+--!
+### دعم الاستثمارات والأعمال
+
+تسهم في تمويل المشاريع الاقتصادية المختلفة، مما يزيد الطلب على النقد بسبب الاحتياجات التمويلية للشركات والأفراد.
+
+--!
+### تنظيم عمليات الادخار والإنفاق
+
+توفر حسابات ادخار واستثمار تسهم في تقليل أو زيادة العرض النقدي المتاح للاقتصاد حسب ميول الادخار لدى العملاء.
+--!
+### التأثير على النشاط الاقتصادي
+
+تؤثر السياسات التي تتبعها البنوك في الإقراض والتمويل على مستوى النشاط الاقتصادي بشكل عام، وبالتالي على الطلب النقدي.
+
+--! 
+### التفاعل مع السياسات النقدية للبنك المركزي
+
+تتأثر البنوك التجارية بسياسات البنك المركزي (مثل تغيير سعر الفائدة أو نسبة الاحتياطي الإلزامي)، وتعمل وفق هذه السياسات لضمان استقرار النظام النقدي.
+
+--!
+### التنسيق بين البنك المركزي والبنوك التجارية
+
+- يقوم البنك المركزي السعودي بمراقبة نشاط البنوك التجارية
+ويضع القوانين والأنظمة التي تنظم عملها
+
+- يسعى الطرفان لتحقيق الأهداف الاقتصادية للمملكة، مثل تقليل البطالة، رفع كفاءة الاقتصاد، وتحقيق رؤية المملكة 2030.
+
+---
+
+### مقارنة بين ميزانية البنك التجاري و ميزانية شركة التأمين
+
+راكان الحربي
+
+
+--! 
+## مقارنة الأصول
+
+--!
+
+### البنك التجاري
+
+المكونات  
+تشمل الأصول القروض الممنوحة للشركات والأفراد، الاستثمارات في الأوراق المالية، والنقد والأرصدة لدى البنوك الأخرى
+
+النطاق  
+تتضمن الأصول التزامات تمويل المشاريع الكبرى والشركات الكبيرة
+
+--!
+
+### شركة التأمين
+
+
+المكونات  
+تشمل الأصول الاحتياطيات النقدية، استثمارات في الأوراق المالية، والعقارات
+
+النطاق  
+تركز الأصول على توفير الموارد المالية لتغطية المطالبات التأمينية المستقبلية
+
+
+--!
+## الالتزامات
+--!
+
+### البنك التجاري
+
+المكونات  
+تشمل الالتزامات الودائع من العملاء، القروض من البنوك الأخرى، وإصدارات السندات
+
+المستوى  
+الالتزامات غالبًا ما تكون مرتفعة نظرًا لتمويل المشاريع الكبيرة
+
+
+--!
+
+### شركة التأمين
+
+المكونات  
+تشمل الالتزامات الاحتياطيات للتأمين، والمطالبات المستحقة، وإعادة التأمين
+
+المستوى  
+الالتزامات تشمل توقعات دفع المطالبات المستقبلية
+
+--!
+## الإيرادات
+--!
+
+### البنك التجاري
+
+المصادر  
+تعتمد الإيرادات على الفوائد المكتسبة من القروض والخدمات المقدمة للشركات
+
+الاستقرار  
+قد تكون الإيرادات متقلبة بناءً على أداء المشاريع الكبيرة
+
+
+--!
+### شركة التأمين
+
+المصادر  
+تعتمد الإيرادات على الأقساط التأمينية المستلمة، والفوائد على الاستثمارات
+
+الاستقرار  
+تكون الإيرادات أكثر استقرارًا نظرًا للتنوع في أنواع التأمين
+
+
+
+--!
+## الأرباح
+--!
+### البنك التجاري
+
+المصادر  
+تعتمد الأرباح على الفرق بين الفوائد المكتسبة من القروض والفوائد المدفوعة على الودائع
+
+الاستقرار  
+تحقق الأرباح إذا كانت الإدارة فعالة في إدارة المخاطر
+
+
+--!
+
+### شركة التأمين
+
+المصادر  
+تعتمد الأرباح على الفرق بين الأقساط التأمينية المستلمة والمطالبات المدفوعة، بالإضافة إلى عوائد الاستثمارات
+
+الاستقرار  
+تكون الأرباح مستقرة عادةً نظراً لتوزيع المخاطر على نطاق واسع
+
+
+--!
+
+## النقاط المشتركة والفارقة
+
+--!
+
+### النقاط المشتركة  
+
+كلا المؤسستين يعتمد على الفوائد المكتسبة من الاستثمارات كأحد المصادر الرئيسية للإيرادات
+كلاهما يستخدم استثمارات في الأوراق المالية والنقد والأرصدة كجزء من الأصول
+--!
+
+### النقاط الفارقة  
+
+ 
+البنك التجاري يركز على تمويل المشاريع الكبيرة والشركات، بينما تركز شركة التأمين على تقديم التغطية التأمينية للأفراد والشركات
+--!
+
+### حجم الالتزامات والأصول  
+
+تكون الالتزامات والأصول للبنك التجاري أكبر بسبب تمويل المشاريع الضخمة، بينما تكون متوسطة في شركة التأمين
+
+### الاستقرار المالي
+تعتبر إيرادات شركة التأمين أكثر استقرارًا نظرًا لتنوع أنواع التأمين والمخاطر المغطاة
+ 
+
+---
+
+## خاتمة
 
