Update النقود و البنوك.md

--- a/النقود و البنوك.md
+++ b/النقود و البنوك.md
@@ -75,8 +75,8 @@ Note: وفي ظل عدم وجود أصول سائلة كافية لإشباع ر
 
 --!
 ### الخصوم (المطلوبات)
-
-1. ودائع العملاء
+--!
+### ودائع العملاء
 
 وهي أكبر خصوم البنك من 568 بليون ريال إلى 590 بليون ريال  
 زيادة 4%  
